# riff-ide

./: Cargo.toml  README.md  WARP.md  debug_macro  libmacros.rlib  tasks.txt  test_macro  test_plugin.lua  test_rsx
rsx-macro/: Cargo.toml
rsx-macro/src/: lib.rs
src/: main.rs
src/core/: app.rs  context.rs  core.rs  icons_store.rs  mod.rs
src/core/enums/: enums.rs
src/core/lexer/: lexer.rs  token.rs
src/core/lib/: mod.rs
src/core/lib/on_click/: macros.rs
src/core/lib/reaxive/: macros.rs  mod.rs  reactive.rs
src/core/lib/rsx/: component.rs  error_boundary.rs  lifecycle.rs  macros.rs  memo.rs  mod.rs  panel.rs  tests.rs
src/core/models/: mod.rs
src/core/plugins/lsp/: lsp.rs
src/core/stores/: app_name_store.rs  global_store.rs  mod.rs  tabs.rs
src/core/stores/icons/: mod.rs
src/core/types/: types.rs
src/core/ui/: code_editor.rs  draw_entry.rs  mod.rs  side_panel.rs
src/core/ui/ui_kit/: app.rs  button.rs  central_panel.rs  color.rs  image.rs  list.rs  mod.rs  scroll_area.rs  selectable_label.rs  separator.rs  spacer.rs  style.rs  style_applicator.rs  text.rs  text_edit.rs  view.rs
src/core/ui/widgets/: file_list.rs  mod.rs  side_panel.rs
src/core/utils/: utils.rs
src/modules/: mod.rs
src/modules/editor/: mod.rs
src/modules/editor/components/: app.rs  bottom_panel.rs  code_editor_panel.rs  file_explorer_panel.rs  file_list.rs  file_tree_item.rs  left_panel.rs  mod.rs  navbar.rs  right_panel.rs  tabs_bar.rs  top_panel.rs
src/modules/file/: mod.rs
src/modules/plugins/: mod.rs  traits.rs
src/modules/settings/: mod.rs
(+43 files in other folders)
